--- a/www/templates/menu.html
+++ b/www/templates/menu.html
@@ -14,21 +14,24 @@
 
   <ion-side-menu side="left">
     <ion-header-bar class="bar-stable">
-      <h1 class="title">Left</h1>
+      <h1 class="title" id="head">Left</h1>
     </ion-header-bar>
-    <ion-content>
+    <ion-content id="menus">
       <ion-list>
-        <ion-item menu-close ng-click="login()">
-          Login
+        <ion-item menu-close href="#">
+          Logout
         </ion-item>
         <ion-item menu-close href="#/app/search" >
           Search
         </ion-item>
         <ion-item menu-close href="#/app/browse">
-          Browse
+          Profile
         </ion-item>
         <ion-item menu-close href="#/app/playlists">
           Playlists
+        </ion-item>
+        <ion-item menu-close href="#/app/posts">
+          DashBoard
         </ion-item>
       </ion-list>
     </ion-content>
